AI Tech Lead & Researcher added

--- a/main.tex
+++ b/main.tex
@@ -170,7 +170,7 @@ experience.
 
 \section{WORK EXPERIENCE}
 
-{\customcventry{May 2022 -- Present}{AI Technical Lead}{Sciling SL}{Valencia, Spain}{}{}
+{\customcventry{May 2022 -- Present}{AI Tech Lead \& Researcher}{Sciling SL}{Valencia, Spain}{}{}
 \begin{itemize}
     \item Leadership of \href{https://www.jotty.ai}{jotty.ai} platform development
     \item Development of a generative model to recreate shadows in e-commerce products.
