Spanish CV added

--- a/main_es.tex
+++ b/main_es.tex
@@ -156,85 +156,81 @@
 \vspace*{0.5mm}
 
 
-\section{PROFESSIONAL SUMMARY}{
-I am a seasoned Tech Lead and Researcher with a PhD in Computer Science, dedicated to leveraging \textbf{AI solutions} for tangible business growth. With a robust background in industry and academia, I thrive on tackling real-world challenges through projects involving \textbf{deep learning}, \textbf{Large Language Models (LLMs)}, and \textbf{computer vision}.
+\section{RESUMEN PROFESIONAL}{
+Soy un experimentado Líder Tecnológico e Investigador con un Doctorado en Ciencias de la Computación, dedicado a aprovechar las \textbf{soluciones de IA} para un crecimiento empresarial tangible. Con una sólida trayectoria en la industria y la academia, disfruto abordando desafíos del mundo real a través de proyectos que involucran \textbf{aprendizaje profundo}, \textbf{Modelos de Lenguaje Grande (LLMs)} y \textbf{visión por computadora}.
 
-Throughout my career, I have worked as both a \textbf{team leader} on projects requiring extensive \textbf{research phases} and as an individual contributor developing \textbf{machine learning solutions} to achieve impactful results. I have successfully led teams in the development of innovative platforms and models. Additionally, I have experience taking models from initial research and development through to production, covering the entire lifecycle from prototypes and \textbf{proof-of-concepts to production}.
+A lo largo de mi carrera, he trabajado como \textbf{líder de equipo} en proyectos que requieren extensas \textbf{fases de investigación} y como contribuyente individual desarrollando \textbf{soluciones de aprendizaje automático} para lograr resultados impactantes. He liderado con éxito equipos en el desarrollo de plataformas y modelos innovadores. Además, tengo experiencia llevando modelos desde la investigación y desarrollo iniciales hasta la producción, cubriendo todo el ciclo de vida desde prototipos y \textbf{pruebas de concepto hasta producción}.
 }
 
+\section{EXPERIENCIA LABORAL}
 
-\section{WORK EXPERIENCE}
-
-{\customcventry{May 2022 -- Present}{AI Tech Lead \& Researcher}{Sciling SL}{Valencia, Spain}{}{}
+{\customcventry{Mayo 2022 -- Presente}{Líder Tecnológico en IA \& Investigador}{Sciling SL}{Valencia, España}{}{}
 \begin{itemize}
-    \item Leadership of \href{https://www.jotty.ai}{jotty.ai} platform development
-    \item Development of a generative model to recreate shadows in e-commerce products.
-    \item Research and development of techniques to solve computer vision problems using machine learning techniques.
+    \item Liderazgo en el desarrollo de la plataforma \href{https://www.jotty.ai}{jotty.ai}.
+    \item Desarrollo de un modelo generativo para recrear sombras en productos de comercio electrónico.
+    \item Investigación y desarrollo de técnicas para resolver problemas de visión por computadora utilizando técnicas de aprendizaje automático.
   \end{itemize}
 }
 \vspace{3mm}
 
-{\customcventry{Sep 2020 -- May 2022}{Researcher}{Polytechnic University of Valencia (UPV)}{Valencia, Spain}{}{}
+{\customcventry{Sep 2020 -- Mayo 2022}{Investigador}{Universidad Politécnica de Valencia (UPV)}{Valencia, España}{}{}
 \begin{itemize}
-    \item  Development of high performance IOT infrastructures against climate change based on artificial intelligence.
-    \item  Solutions for efficient vehicle traffic management.
+    \item Desarrollo de infraestructuras IOT de alto rendimiento contra el cambio climático basadas en inteligencia artificial.
+    \item Soluciones para una gestión eficiente del tráfico vehicular.
   \end{itemize}
 }
 \vspace{3mm}
-{\customcventry{Jan 2019 -- Apr 2020}{Data engineer}{Catholic University Saint Anthony (UCAM)}{Murcia, Spain}{}{}
+{\customcventry{Ene 2019 -- Abr 2020}{Ingeniero de datos}{Universidad Católica San Antonio (UCAM)}{Murcia, España}{}{}
 {\begin{itemize}
-    \item Design and development of a real-time analysis infrastructure for soft sensor data.
+    \item Diseño y desarrollo de una infraestructura de análisis en tiempo real para datos de sensores blandos.
 \end{itemize}}}
 
 \vspace{3mm}
 
-{\customcventry{Jul 2015 -- Jan 2016}{Software engineer}{ElevenPaths (Telefónica)}{Málaga, Spain}{}{}
+{\customcventry{Jul 2015 -- Ene 2016}{Ingeniero de software}{ElevenPaths (Telefónica)}{Málaga, España}{}{}
 {\begin{itemize}
-    \item Development of proof-of-concepts in the form of functional prototypes in the field of IT security.
+    \item Desarrollo de pruebas de concepto en forma de prototipos funcionales en el campo de la seguridad informática.
 \end{itemize}}}
 
 \vspace{3mm}
 
-{\customcventry{Mar 2015 -- Jun 2015}{Developer internship}{CESIE}{Palermo, Italy}{}{}}
+{\customcventry{Mar 2015 -- Jun 2015}{Prácticas de desarrollador}{CESIE}{Palermo, Italia}{}{}}
 
+\section{EDUCACIÓN}
 
-
-
-\section{EDUCATION}
-
-{\customcventry{Feb 2020 -- FEB 2023}{PhD}{Polytechnic University of Valencia (UPV)}{Valencia, Spain}{}{}
+{\customcventry{Feb 2020 -- Feb 2023}{Doctorado}{Universidad Politécnica de Valencia (UPV)}{Valencia, España}{}{}
 
 {\begin{itemize}
-    \item \textbf{Thesis}: Analysis design and implementation of artificial intelligence techniques in edge computing environments.
+    \item \textbf{Tesis}: Análisis, diseño e implementación de técnicas de inteligencia artificial en entornos de computación en el borde.
   \end{itemize}}
 }
 
 \vspace{3mm}
 
-{\customcventry{Oct 2018 -- Feb 2020}{Master's Degree in Massive Data Analysis Technologies}{University of Murcia / University of Santiago de Compostela }{Murcia and Santiago, Spain}{}{}{\begin{itemize}
-    \item \textbf{TFM}: Hopper: distributed task scheduling framework based in Apache Zooekeper.
+{\customcventry{Oct 2018 -- Feb 2020}{Máster en Tecnologías de Análisis de Datos Masivos}{Universidad de Murcia / Universidad de Santiago de Compostela}{Murcia y Santiago, España}{}{}{\begin{itemize}
+    \item \textbf{TFM}: Hopper: marco de programación distribuida basado en Apache Zookeeper.
   \end{itemize}}}
 \vspace{3mm}
 
-{\customcventry{Oct 2015 -- Sept 2018}{Computer engineering degree}{Catholic University Saint Anthony (UCAM)}{Murcia, Spain}{}{}{\begin{itemize}
-    \item Mention in information technologies.
-    \item Mention in software engineering.
+{\customcventry{Oct 2015 -- Sep 2018}{Grado en Ingeniería Informática}{Universidad Católica San Antonio (UCAM)}{Murcia, España}{}{}{\begin{itemize}
+    \item Mención en tecnologías de la información.
+    \item Mención en ingeniería de software.
   \end{itemize}}}
 
-
-\section{ADVANCED TECHNICAL SKILLS \& KNOWLEDGE AREAS}
+\section{HABILIDADES TÉCNICAS AVANZADAS \& ÁREAS DE CONOCIMIENTO}
 {\begin{itemize}
-    \item Programming Languages: \textbf{Python}, \textbf{C}, \textbf{Java}, \textbf{Javascript}
-    \item Deep Learning frameworks: \textbf{Pytorch}, \textbf{Tensorflow}, \textbf{Transformers}
-    \item Machine Learning frameworks: \textbf{Scikit-learn}, \textbf{Pandas}, \textbf{Numpy}
-    \item Big Data frameworks: \textbf{Apache Kafka}, \textbf{Apache Storm}, \textbf{Spark}, \textbf{Zookeeper}
-    \item Databases: \textbf{SQL} (MySQL, SQLite), \textbf{noSQL} (MongoDB, DynamoDB)
-    \item Cloud Computing: \textbf{terraform},  \textbf{Kubernentes}, \textbf{AWS} (Sagemaker, Lambda, SQS, S3, cloudFormation)
-    \item Developer Tools \textbf{Git}, \textbf{Docker}
+    \item Lenguajes de Programación: \textbf{Python}, \textbf{C}, \textbf{Java}, \textbf{Javascript}
+    \item Frameworks de Aprendizaje Profundo: \textbf{Pytorch}, \textbf{Tensorflow}, \textbf{Transformers}
+    \item Frameworks de Aprendizaje Automático: \textbf{Scikit-learn}, \textbf{Pandas}, \textbf{Numpy}
+    \item Frameworks de Big Data: \textbf{Apache Kafka}, \textbf{Apache Storm}, \textbf{Spark}, \textbf{Zookeeper}
+    \item Bases de Datos: \textbf{SQL} (MySQL, SQLite), \textbf{noSQL} (MongoDB, DynamoDB)
+    \item Computación en la Nube: \textbf{terraform},  \textbf{Kubernentes}, \textbf{AWS} (Sagemaker, Lambda, SQS, S3, CloudFormation)
+    \item Herramientas de Desarrollo: \textbf{Git}, \textbf{Docker}
   \end{itemize}
 }
   
-\section{PUBLICATIONS}
+\section{PUBLICACIONES}
+
 
 \customcvproject{AI-enabled autonomous drones for fast climate change crisis assessment}{19 Jul 2021}
   {\href{https://ieeexplore.ieee.org/document/9490639/}{IEEE Internet of Things Journal}}
@@ -254,7 +250,7 @@ Throughout my career, I have worked as both a \textbf{team leader} on projects r
 \customcvproject{BAUSPACE: A Scalable Infrastructure for Soft Sensors Development}{13 Jul 2018}
     {\href{https://dl.acm.org/citation.cfm?id=3229710.3229744}{Proceedings of the 47th International Conference on Parallel Processing Companion}}
 
-\section{Certificates}
+\section{Certificados}
 
 \begin{itemize}
     \item \customcvcertificate{\textbf{Scrum Master} \href{https://scrummanager.com/website/c/profile/member.php?id=40977}{\small{Credential ID: 40977l}}}{2022}{Scrum Manager}
@@ -279,67 +275,46 @@ Throughout my career, I have worked as both a \textbf{team leader} on projects r
     
 \end{itemize}
 
-
-
-
-
-
-\comment{
-\section{PROFESSIONAL QUALIFICATION}
-{\begin{itemize}
-    \item \textbf{Data structures and Algorithm}
-    \item \textbf{PCB designing} in Altium and making complete circuit
-    \item \textbf{Digital circuit design} (tools – DE 2-115 FPGA,Verilog , Quartus , Modelsim Altera)
-    \item \textbf{Knowledge of processor architecture}
-  \end{itemize}}
-}
-
 \section{LANGUAGE}
 
 {\begin{itemize}
-    \item {\textbf{Spanish} [native]}
-    \item {\textbf{English} [fluent]}
-    \item {\textbf{Italian} [trainee]} 
+    \item {\textbf{Español} [native]}
+    \item {\textbf{Inglés} [fluent]}
+    \item {\textbf{Italiano} [trainee]} 
   \end{itemize}}
     
 
   
-\section{PROJECTS}
+\section{PROYECTOS}
 
-{\customcvproject{Jotty}{Jun 2023 – Present}
+{\customcvproject{Jotty}{Jun 2023 – Presente}
 {\begin{itemize}
-  \item \href{https://www.jotty.ai}{jotty.ai} Is your online meeting copilot. An AI-based platform that allows you to obtain and share valuable information from all the meetings you attend on a daily basis.
+\item \href{https://www.jotty.ai}{jotty.ai} Es tu copiloto en reuniones en línea. Una plataforma basada en IA que te permite obtener y compartir información valiosa de todas las reuniones a las que asistes diariamente.
 \end{itemize}
 }
 }
 
-{\customcvproject{Identid.me}{Jul 2020 – Dec 2021}
+{\customcvproject{Identid.me}{Jul 2020 – Dic 2021}
 {\begin{itemize}
-  \item \href{https://identid.me}{identid.me} wants to help you get the job of your dreams, how? By helping you create a portfolio that makes you stand out from the crowd in less than 5 minutes.
+\item \href{https://identid.me}{identid.me} quiere ayudarte a conseguir el trabajo de tus sueños, ¿cómo? Ayudándote a crear un portafolio que te haga destacar de la multitud en menos de 5 minutos.
 \end{itemize}
 }
 }
 
-{\customcvproject{Urlcast}{May 2021 – Jun 2021}
-  {\begin{itemize}
-    \item Schedule your links with \href{https://urlcast.io}{urlcast.io} to be released at a time of your choice and share it to keep your audience engaged.
-  \end{itemize}
-  }
+{\customcvproject{Urlcast}{Mayo 2021 – Jun 2021}
+{\begin{itemize}
+\item Programa tus enlaces con \href{https://urlcast.io}{urlcast.io} para que se publiquen en el momento de tu elección y compártelos para mantener a tu audiencia comprometida.
+\end{itemize}
+}
 }
 
-{\customcvproject{Bauspace}{Mar 2017 – Apr 2020}
-  {\begin{itemize}
-    \item A distributed and modular framework to develop soft sensors in a scalable manner and transparently to the cloud provider.
-  \end{itemize}
-  }
+{\customcvproject{Bauspace}{Mar 2017 – Abr 2020}
+{\begin{itemize}
+\item Un sistema y modular para desarrollar sensores blandos de manera escalable y transparente para el proveedor de la nube.
+\end{itemize}
+}
 }
 
-{\customcvproject{Hopper}{Sept 2018 – Mar 2019}
-  {\begin{itemize}
-    \item Distributed and fail-safe framework for the execution of applications using the same executable to perform multiple actions.
-  \end{itemize}
-  }
-}
 \end{document}
 
 
